# ecommerce-gcp-project

./: .gitignore  Dockerfile.serve  Dockerfile.train  README.md  cloudbuild.yaml  package.json  pyproject.toml  workflow_settings.yaml
composer/: README.md  requirements.txt  variables_example.json
composer/dags/: ecommerce_monthly.py
composer/dags/sql/: load_bronze_partition.sql
config/: monthly_loads.json
dataform/: workflow_settings.yaml
dataform/definitions/assertions/: assert_snapshot_window.sqlx  assert_valid_event_types.sqlx
dataform/definitions/marts/: user_product_interactions_daily.sqlx
dataform/definitions/staging/: stg_events.sqlx
definitions/assertions/: assert_events_primary_keys.sqlx  assert_load_month_in_bronze.sqlx  assert_snapshot_window.sqlx  assert_valid_event_types.sqlx
definitions/marts/: dim_calendar.sqlx  product_features_daily.sqlx  product_features_monthly.sqlx  session_start.sqlx  user_features_daily.sqlx  user_features_monthly.sqlx  user_product_interactions_daily.sqlx  user_product_interactions_monthly.sqlx
definitions/sources/: bronze_raw_events.sqlx
definitions/staging/: stg_events.sqlx
includes/: constants.js
infra/sql/: 01_create_bronze_raw_events.sql
ml/: .env.example  .gitignore  README.md  requirements.txt  upload_model.py
ml/src/: config.py
ml/src/metrics/: metrics.py
sql/: 00_create_datasets.sql  01_create_bronze_raw_events.sql  01b_create_bronze_external_table.sql  02_load_bronze_from_external.sql  02_load_bronze_month.sql  03_create_monitoring_logs.sql  03_run_dataform_monthly.md
src/api/: main.py
(+8 files in other folders)
